# language-meson

./: LICENSE.md  README.md  package.json
grammars/: meson.cson  meson.json
settings/: language-meson.cson
tests/: meson.build  meson_options.txt
